kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-web-server
  namespace: appplication-server
spec:
  type: ClusterIP 
  ports:
    - port: 3000
  selector:
    app: web-server
