kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: appplication-server
spec:
  rules:
    - host: bar.local
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: node-web-server 
                port:
                  number: 3000
